# Permitting-Agent

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  render.yaml  requirements.txt
config/: checklist_sample.yaml
samples/: README.md
scripts/: create_sample_pdf.py  run_e2e.py
src/permitting_agent/: __init__.py  cli.py  portal_crawl.py
src/permitting_agent/adapters/: __init__.py  base.py  registry.py  sample_jurisdiction.py
src/permitting_agent/document_review/: __init__.py  parsers.py  service.py
src/permitting_agent/intake/: __init__.py  service.py
src/permitting_agent/models/: __init__.py  document.py  intake.py  jurisdiction.py  outreach.py
src/permitting_agent/outreach/: __init__.py  service.py
src/permitting_agent/portal_automation/: __init__.py  service.py
src/permitting_agent/portal_research/: __init__.py  crawler.py  service.py
static/css/: style.css
templates/: adapters.html  base.html  fill_application_done.html  fill_application_fields.html  fill_application_start.html  index.html  submit_online_done.html  submit_online_fields.html  submit_online_info.html  submit_online_review.html  submit_online_start.html  success.html
tests/: __init__.py  conftest.py  test_adapters.py  test_document_review.py  test_intake.py  test_outreach.py  test_parsers.py  test_portal_automation.py  test_portal_research.py
